--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,7 +26,7 @@
                                 <input type="text" name="email" id="email" class="form-control" placeholder="Email">
                             </div>
                             <div class="form-group">
-                                <input type="text" name="telefono" id="telefono" class="form-control"
+                                <input type="text" name="telephone" id="telephone" class="form-control"
                                     placeholder="Telefono">
                             </div>
                             <div class="form-group">
